# setup-practicing-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
temperature_package/: draw.py  loader.py  main.py
tests/: test_loader.py
